# dbl-operator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: operator_gateway_contract.md
src/dbl_operator/: __init__.py  ansi_colors.py  app_cli.py  context_declarer.py  domain_types.py  gateway_client.py  http_gateway_client.py  intent_composer.py  presenters.py  tail_presenter.py
src/dbl_operator/projections/: base.py  decision_stats.py  failures.py  integrity.py  latency.py  policy_map.py
tests/: test_http_client.py  test_roles_only.py
