[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbl-operator"
version = "0.1.0"
description = "Operator-side roles for a DBL-style gateway (pure client, no policy logic)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["httpx>=0.27"]

[project.scripts]
dbl-operator = "dbl_operator.app_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["dbl_operator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "--strict-markers", "--strict-config"]
markers = [
  "integration: marks tests that require a real gateway or external service",
]
